...
    return ConstrainedPageWidth(
      child: Scaffold(
        appBar: AppBar(
          title: Text(context.l10n.newAnimal),
          actions: [
            IconButton(
              key: const Key('save-animal-button'),
              onPressed:
                  _saving || _processingPicture || _loading || _boxes.isEmpty
                  ? null
                  : _save,
              icon: const Icon(Icons.save),
              tooltip: context.l10n.saveAnimal,
...
                ),
              ],
            ),
            const SizedBox(height: 16),

            TextFormField(
              key: const Key('common-name-field'),
              controller: _commonNameController,
              enabled: !_saving,
              decoration: InputDecoration(labelText: context.l10n.commonName),
              validator: (value) {
                if (value == null || value.trim().isEmpty) {
                  return context.l10n.pleaseEnterCommonName;
...
